updated shoppingcart module

--- a/Wednesday_Lesson_Inclass-Updated-Lecture_Rangers87.ipynb
+++ b/Wednesday_Lesson_Inclass-Updated-Lecture_Rangers87.ipynb
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -909,11 +909,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alex your cart has 3 items in it: \n",
-      "cheese\n",
-      "lasagna\n",
-      "chicken\n",
-      "Your total is $10\n"
+      "Goodbye Alex!\n"
      ]
     }
    ],
